		* As a side effect, fixed the "Any" search in webserver.
		* Fixed webserver connection with empty passwords. :)
		* Fixed webserver connection with guest account.
		* Added "add <ed2k link>" command to amulecmd.
		* Tracked down and killed a number of hidden bugs.
		* Added commands to change/monitor bandwidth settings to
		  amulecmd.
		* Made wxTRANSLATE actually work.

	Special Thanks To:

		* Translators:
		  Ateo:             (US english / en_US)
		  biger [HUN]:      (Hungarian  / hu_HU)
		  experience.chris: (German     / de_DE)
		  GhePeU:	    (Italian    / it_IT)
		  Gusar:	    (Slovenian  / sl_SL)
		  ilbuio:	    (Italian    / it_IT)
		  KamiKazeNH:	    (Brazilian  / pt_BR)
		  mad_soft:	    (Spanish    / es_ES)
		  nbfnw:	    (Chinese    / zh_CH)
		  Ogon:		    (Polish     / pl_PL)
		  piarres:	    (Basque     / es_EU)
		  pukyxd:	    (Catalan    / es_CA)
		  Supersnail	    (Dutch      / nl_NL)
		  Typhon:	    (Slovenian  / sl_SL)

		* Contributors:
		  alehack,	alus,
		  Baz,		boutros,fossybaer,
		  Frankk,	han,
		  junaru,	sebaX,
		  skolnick,	sLiCeR\,
		  Vollstrecker,	volpop,
		  {xmb}

		* Bug and feature reporters:
		  Banerjee,	chisky2003,
		  Danny,	ecforum,
		  fctk,		Gnucco,
		  hades,	jaguarwan,
		  jolupa,	juanii,
		  kdka,		kno,
		  m2kio,	MichaelLong,
		  Pableron,	pi-c,
		  plaenky,	realcruncher,
		  Sir,		Sniffer,
		  sosonok,	|Syrius|,
		  xplode_me,	wizeman

		* Everyone at:
		  #amule	irc.freenode.net
		  wiki		http://wiki.amule.org
		  forums	http://forum.amule.org
		  bugtracker	http://bugs.amule.org

		* All aMule users!!!

	Welcome our new aMule team members: lionel77, nachbarnebenan and one2one


--------------------------------------------------------------------------------


Version 2.0.0rc7 - The "99,6% Final" version.
----------
2004-10-19

	bisley:
		* Added session ratio and total ratio to XAS

	deltaHF:
	        * Got back from hell and changed one icon on the GUI ;)

	Jacobo221:
		aMule GUI: